--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,13 @@
-<project name="cssh-adapter" basedir="." default="jar">
+<project name="att-cssh-actor" basedir="." default="jar">
 
-    <property name="version" value="1.0"/>
+    <property name="version" value="1.0.11"/>
     <property name="lib.dir" value="lib"/>
     <property name="build.dir" value="target"/>
     <property name="build.test.dir" value="${build.dir}/test"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="aroar.dir" value="${build.dir}/archive/${ant.project.name}_${version}"/>
 
-    <property file="local.properties"/>
+    <!--<property file="local.properties"/>-->
 
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -28,8 +28,8 @@
         </javac>
     </target>
 
-
-    <target name="jar" depends="test" description="creates jar file for distribution">
+<!-- temporarily removed depends="test" -->
+    <target name="jar" depends="compile" description="creates jar file for distribution">
         <jar destfile="${build.dir}/${ant.project.name}-${version}.jar">
             <fileset dir="${classes.dir}" includes="**/*.class"/>
         </jar>
@@ -95,9 +95,9 @@
             <formatter type="xml"/>
 
             <!-- see local.properties and/or default.properties -->
-            <sysproperty key="key" value="${aws.key}"/>
-            <sysproperty key="secret" value="${aws.secret}"/>
-            <sysproperty key="queue" value="${aws.queue}"/>
+            <!--<sysproperty key="key" value="${aws.key}"/>-->
+            <!--<sysproperty key="secret" value="${aws.secret}"/>-->
+            <!--<sysproperty key="queue" value="${aws.queue}"/>-->
 
             <formatter type="plain" usefile="false"/>
             <batchtest fork="yes" todir="./${build.dir}/">
@@ -124,7 +124,8 @@
 
         <mkdir dir="${aroar.dir}"/>
 
-        <copy file="lib/com.qbos.QTP-0.78b.jar" tofile="${aroar.dir}/com.qbos.QTP.jar"/>
+        <copy file="lib/jsch-0.1.50.jar" tofile="${aroar.dir}/jsch.jar"/>
+        <copy file="lib/sshj-0.8.1.jar" tofile="${aroar.dir}/sshj"/>
         <copy file="lib/commons-lang-2.3.jar" tofile="${aroar.dir}/commons-lang-2.3.jar"/>
         <copy file="lib/json-simple-1.1.1.jar" tofile="${aroar.dir}/json-simple-1.1.1.jar"/>
         <copy file="lib/com.springsource.org.apache.axis-1.4.0.jar" tofile="${aroar.dir}/com.springsource.org.apache.axis-1.4.0.jar"/>
@@ -140,12 +141,11 @@
         <copy file="lib/com.springsource.javax.xml.soap-1.3.0.jar" tofile="${aroar.dir}/com.springsource.javax.xml.soap-1.3.0.jar"/>
         <copy file="lib/com.springsource.org.apache.commons.codec-1.6.0.jar" tofile="${aroar.dir}/com.springsource.org.apache.commons.codec-1.6.0.jar"/>
         <copy file="lib/commons-discovery-0.5.jar" tofile="${aroar.dir}/commons-discovery-0.5.jar"/>
-        <copy file="lib/commons-io-1.3.2.jar" tofile="${aroar.dir}/commons-io-1.3.2.jar"/>
-        <copy file="lib/commons-lang3-3.1.jar" tofile="${aroar.dir}/commons-lang3-3.1.jar"/>
+
 
         <copy file="${build.dir}/${ant.project.name}-${version}.jar"
               tofile="${aroar.dir}/${ant.project.name}-${version}.jar"/>
-        <copy file="conf/qbos_configDescriptor.xml" tofile="${aroar.dir}/qbos_configDescriptor.xml"/>
+        <copy file="conf/cssh_configDescriptor.xml" tofile="${aroar.dir}/cssh_configDescriptor.xml"/>
         <copy file="conf/config.xml" tofile="${aroar.dir}/config.xml"/>
         <replace file="${aroar.dir}/config.xml">
             <replacefilter token="@ant.project.name@" value="${ant.project.name}"/>
